chore: Update client page title to "Custom Game Client".

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <!-- CLEOSELENE_CONFIG -->
-    <title>Game Client</title>
+    <title>Custom Game Client</title>
     <style>
         body { 
             margin: 0; 
