--- a/client/index.html
+++ b/client/index.html
@@ -58,9 +58,63 @@
             50% { opacity: 1; }
             100% { opacity: 0.4; }
         }
+
+        /* Mobile Warning - hidden by default, shown on small screens */
+        #mobile-warning {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
+            z-index: 200;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+        #mobile-warning .icon {
+            font-size: 4rem;
+            margin-bottom: 20px;
+        }
+        #mobile-warning h2 {
+            color: #ffcc00;
+            font-family: monospace;
+            font-size: 1.5rem;
+            margin: 0 0 15px 0;
+            letter-spacing: 2px;
+        }
+        #mobile-warning p {
+            color: #aaa;
+            font-family: sans-serif;
+            font-size: 1rem;
+            margin: 0;
+            max-width: 300px;
+            line-height: 1.5;
+        }
+
+        /* Show mobile warning on small screens */
+        @media (max-width: 768px) {
+            #mobile-warning {
+                display: flex;
+            }
+            #gameCanvas, #loading-overlay {
+                display: none;
+            }
+        }
     </style>
 </head>
 <body>
+    <!-- Mobile Warning -->
+    <div id="mobile-warning">
+        <div class="icon">🖥️</div>
+        <h2>DESKTOP REQUIRED</h2>
+        <p>This game requires a keyboard to play. Please visit on a desktop or laptop computer.</p>
+    </div>
+
     <div id="loading-overlay">
         <!-- Embedded Logo SVG -->
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" width="250" height="250">
